feat: added unit-tests

--- a/dataset/city_to_country_mapping.json
+++ b/dataset/city_to_country_mapping.json
@@ -77119,5 +77119,6 @@
     "vernoux-en-vivarais": "FR",
     "sedze-maubecq": "FR",
     "bulat-pestivien": "FR",
-    "saint-laurent-en-beaumont": "FR"
+    "saint-laurent-en-beaumont": "FR",
+    "österreich": "AT"
 }
